24. Mars
	Rydding i CSS
	Valg av semester endelig på plass
	Bedre logikk og rettledning i hjelpetekst for ny blogg
	Første steg mot bruk av mysqli i url.php med runSQL2()

23. Mars
	Introduserte jQuery
		- Enkle animasjoner
	Litt rydding i CSS/Relatert
	Byttet ut <details>/<summary> med egen løsning basert på jQuery
	Ryddet opp litt i URL-lengde
	Endringer i datamodell
	
	